fix: camera video not fitting

--- a/static/templates/scanner/style.css
+++ b/static/templates/scanner/style.css
@@ -19,5 +19,7 @@ h1, p {
 }
 
 #video {
-    width: 95vw;
+    height: 50vh;
+    width: 98vw;
+    object-fit: contain;
 }
